<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">StudentHub</string>
    <string name="studenthub_sentence">The right place for students</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_anonymous_btn">Guest mode</string>
    <string name="post">Post</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo">Photo</string>
    <string name="notifications">Notifications</string>
    <string name="forgot_password_text">Please enter your email address in order to get a reset link:</string>
    <string name="account_creation">Account creation</string>
    <string name="full_name">Full name</string>
    <string name="create_account">Create account</string>
    <string name="startedfollowing">" started following you"</string>
    <string name="post_text">What\'s on your mind?</string>
    <string name="error_message">Something went wrong!</string>
    <string name="more_options_text">More options</string>
    <string name="save_text">Save</string>
    <string name="bio_hint">Bio</string>
    <string name="add_a_comment" tools:ignore="TypographyEllipsis">Add a comment...</string>
    <string name="delete_comment_text">Do you want to delete your comment?</string>
    <string name="comment_deleted">Comment Deleted!</string>
    <string name="liked_your_post_quote">" liked your photo"</string>
    <string name="view_all">"View All "</string>
    <string name="comments_quote">" Comments"</string>
    <string name="restore_password">Restore Password</string>
    <string name="username">Username</string>
    <string name="image_url_link" translatable="false">https://www.lexremodeling.com/wp-content/uploads/2018/03/user-alt-256.png</string>
    <string name="follow_btn">Follow</string>
    <string name="likes_tv">" likes"</string>
    <string name="commented_quote">" commented: "</string>
    <string name="uploading_failed">Uploading failed!</string>
    <string name="no_image_selected">No image selected!</string>
    <string name="changes_saved">Changes saved!</string>
    <string name="restore_password_error">Email address cannot be empty!</string>
    <string name="reset_link_message">"Reset link has been sent to "</string>
    <string name="reset_link_problem">Problem sending a reset link!</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="profile">Profile</string>
    <string name="uploading">Uploading</string>
    <string name="comment_cannot_be_empty">Comment cannot be empty</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="failed_to_post">Failed to post!</string>
    <string name="login_dialog">Login</string>
    <string name="dialog_cancel">Got it</string>
    <string name="guest_dialog_text">You need to login first</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="must_enter_description">You must enter description!</string>
    <string name="institute">Institute</string>
    <string name="notification_channel">Chat channel</string>
    <string name="problem_loading">There was a problem loading followers</string>
    <string name="loading">Loading </string>
    <string name="chat_rooms_problems">There was an problem loading chat rooms</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="messages">Messages</string>
    <string name="problem_loading_messages">There was a problem loading messages</string>
    <string name="problem_sending_message">There was a problem sending message</string>
    <string name="start_chat_with">"Start Chat With: "</string>
    <string name="create_chat_room">\"Would you like to create a chat room with \"</string>
    <string name="chat_room_exists">Chat room with this user already exists</string>
    <string name="added_chat_room">\"Successfully added chat room \"</string>
    <string name="finished_caching_users">Finished caching users</string>
    <string name="sent_message">Successfully sent message</string>
    <string name="chat">Chat</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="send">Send</string>
</resources>
