<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F97BA"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways" />

        <TextView
            android:id="@+id/studenthub_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/bitter"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studenthub_sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studenthub_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bitter"
            android:text="@string/studenthub_sentence"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studenthub_sentence"
            android:layout_marginStart="20dp"
            android:layout_marginTop="110dp"
            android:gravity="start"
            android:paddingEnd="30dp"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_mail_24"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:maxLength="25"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:paddingEnd="30dp"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:counterOverflowTextAppearance="@style/CounterOverFlow"
            app:counterTextAppearance="@style/CounterText"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#1F5165"
            android:drawableEnd="@drawable/ic_university_icon"
            android:text="@string/login_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textSize="13sp"
            app:cornerRadius="40dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_anonymous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_marginStart="50dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#1F5165"
            android:text="@string/login_anonymous_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textSize="13sp"
            app:cornerRadius="40dp">
        </com.google.android.material.button.MaterialButton>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/record_animation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="155dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="10dp"
            android:scaleX="3"
            android:scaleY="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
