<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/text_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_to_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/guest_dialog_text"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/pleaselogin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fields"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--            <CheckBox-->
            <!--                android:id="@+id/delete_song_checkBox"-->
            <!--                style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:backgroundTint="@color/colorPrimary"-->
            <!--                android:text="@string/delete_button_dialog" />-->

            <Button
                android:id="@+id/dialog_got_it"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:text="@string/dialog_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/dialog_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorGreen"
                android:text="@string/login_dialog"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>