<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F97BA"
    android:clickable="true"
    android:keepScreenOn="true"
    tools:context="com.example.studenthub.ForgotPasswordFragment"
    tools:ignore="KeyboardInaccessibleWidget">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/checking_animation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="156dp"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/checking" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checking_animation"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/bitter"
        android:gravity="center"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textColor="#1951A8"
        android:textSize="19sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:boxStrokeColor="@color/black"
        app:errorEnabled="true"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_email_black_24dp"
            android:drawableTint="@color/black"
            android:hint="@string/e_mail_address"
            android:inputType="text"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restore_password_material_btn"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_below="@+id/forgot_password_email_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#1E4B73"
        android:text="@string/restore_password"
        android:textSize="13sp"
        app:cornerRadius="40dp"
        app:elevation="3dp">
    </com.google.android.material.button.MaterialButton>


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/restore_password_material_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="71dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/passwordor" />

</RelativeLayout>